// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots infinite-list/List basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-01 MuiGrid-spacing-xs-24-025"
    >
      <div
        className="MuiGrid-item-02 MuiGrid-grid-xs-12-041"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
        >
          <div
            className="MuiList-root MuiList-padding"
          >
            <div
              style={
                Object {
                  "overflow": "visible",
                  "width": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "height": 400,
                    "overflow": "hidden",
                    "position": "relative",
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "WebkitOverflowScrolling": "touch",
                      "bottom": 0,
                      "left": 0,
                      "marginBottom": 0,
                      "marginRight": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                >
                  <div
                    aria-label="grid"
                    aria-readonly={true}
                    className="ReactVirtualized__Grid ReactVirtualized__List"
                    onScroll={[Function]}
                    role="grid"
                    style={
                      Object {
                        "WebkitOverflowScrolling": "touch",
                        "boxSizing": "border-box",
                        "direction": "ltr",
                        "height": 400,
                        "overflowX": false,
                        "overflowY": false,
                        "position": "relative",
                        "width": 0,
                        "willChange": "transform",
                      }
                    }
                    tabIndex={0}
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "height": 6,
                      "left": 2,
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "transition": "opacity 200ms",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "height": "100%",
                        "position": "relative",
                      }
                    }
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "top": 2,
                      "transition": "opacity 200ms",
                      "width": 6,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "position": "relative",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots infinite-list/Table basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-098 MuiGrid-spacing-xs-24-0122"
    >
      <div
        className="MuiGrid-item-099 MuiGrid-grid-xs-12-0138"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
        >
          <div
            className="MuiTable-root"
          >
            <div
              className="MuiTableHead-root Component-root-29"
            >
              <div
                className="MuiTableRow-root Component-root-31 MuiTableRow-head Component-head-34"
              >
                <div
                  aria-sort={null}
                  className="MuiTableCell-root InnerTableCell-root-41 MuiTableCell-head InnerTableCell-head-42"
                  scope="col"
                >
                  Index
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root InnerTableCell-root-41 MuiTableCell-head InnerTableCell-head-42"
                  scope="col"
                >
                  Title
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root InnerTableCell-root-41 MuiTableCell-head InnerTableCell-head-42"
                  scope="col"
                >
                  Timestamp
                </div>
              </div>
            </div>
            <div
              style={
                Object {
                  "overflow": "visible",
                  "width": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "height": 400,
                    "overflow": "hidden",
                    "position": "relative",
                    "width": 0,
                  }
                }
              >
                <div
                  style={
                    Object {
                      "WebkitOverflowScrolling": "touch",
                      "bottom": 0,
                      "left": 0,
                      "marginBottom": 0,
                      "marginRight": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                >
                  <div
                    aria-label="grid"
                    aria-readonly={true}
                    className="ReactVirtualized__Grid ReactVirtualized__List InnerTableBody-root-57"
                    onScroll={[Function]}
                    role="grid"
                    style={
                      Object {
                        "WebkitOverflowScrolling": "touch",
                        "boxSizing": "border-box",
                        "direction": "ltr",
                        "height": 400,
                        "overflowX": false,
                        "overflowY": false,
                        "position": "relative",
                        "width": 0,
                        "willChange": "transform",
                      }
                    }
                    tabIndex={0}
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "height": 6,
                      "left": 2,
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "transition": "opacity 200ms",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "height": "100%",
                        "position": "relative",
                      }
                    }
                  />
                </div>
                <div
                  style={
                    Object {
                      "borderRadius": 3,
                      "bottom": 2,
                      "display": "none",
                      "opacity": 0,
                      "position": "absolute",
                      "right": 2,
                      "top": 2,
                      "transition": "opacity 200ms",
                      "width": 6,
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,.2)",
                        "borderRadius": "inherit",
                        "cursor": "pointer",
                        "display": "block",
                        "position": "relative",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots infinite-list/Table order 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-0195 MuiGrid-spacing-xs-24-0219"
    >
      <div
        className="MuiGrid-item-0196 MuiGrid-grid-xs-12-0235"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
        >
          <div
            className="MuiTable-root"
          >
            <div
              className="MuiTableHead-root Component-root-29"
            >
              <div
                className="MuiTableRow-root Component-root-31 MuiTableRow-head Component-head-34"
              >
                <div
                  aria-sort={null}
                  className="MuiTableCell-root InnerTableCell-root-41 MuiTableCell-head InnerTableCell-head-42"
                  scope="col"
                >
                  Index
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root InnerTableCell-root-41 MuiTableCell-head InnerTableCell-head-42"
                  scope="col"
                >
                  <span
                    aria-describedby={null}
                    className="MuiButtonBase-root MuiTableSortLabel-root"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                    title="Title"
                  >
                    Title
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root InnerTableCell-root-41 MuiTableCell-head InnerTableCell-head-42"
                  scope="col"
                >
                  <span
                    aria-describedby={null}
                    className="MuiButtonBase-root MuiTableSortLabel-root"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    tabIndex="0"
                    title="Timestamp"
                  >
                    Timestamp
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <span
            className="MuiTypography-root MuiTypography-caption"
            style={
              Object {
                "margin": 10,
              }
            }
          >
            - tip: use [shift + click] to sort by multiple fields
          </span>
          <aside
            className="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom"
            style={
              Object {
                "margin": 10,
              }
            }
          >
            Result: 
            []
          </aside>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots infinite-list/Table search 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-0292 MuiGrid-spacing-xs-24-0316"
    >
      <div
        className="MuiGrid-item-0293 MuiGrid-grid-xs-12-0332"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded"
        >
          <div
            className="MuiTable-root"
          >
            <div
              className="MuiTableHead-root Component-root-29"
            >
              <div
                className="MuiTableRow-root Component-root-31 MuiTableRow-head Component-head-34"
              >
                <div
                  aria-sort={null}
                  className="MuiTableCell-root InnerTableCell-root-41 MuiTableCell-head InnerTableCell-head-42"
                  scope="col"
                >
                  Index
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root InnerTableCell-root-41 MuiTableCell-head InnerTableCell-head-42"
                  scope="col"
                >
                  Title
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root InnerTableCell-root-41 MuiTableCell-head InnerTableCell-head-42"
                  scope="col"
                >
                  Timestamp
                </div>
              </div>
              <div
                className="MuiTableRow-root Component-root-31 MuiTableRow-head Component-head-34"
              >
                <div
                  aria-sort={null}
                  className="MuiTableCell-root InnerTableCell-root-41 MuiTableCell-head InnerTableCell-head-42"
                  scope="col"
                />
                <div
                  aria-sort={null}
                  className="MuiTableCell-root InnerTableCell-root-41 MuiTableCell-head InnerTableCell-head-42"
                  scope="col"
                >
                  <div
                    className="MuiInput-root MuiInput-fullWidth MuiInput-underline"
                  >
                    <input
                      className="MuiInput-input"
                      name="name"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  aria-sort={null}
                  className="MuiTableCell-root InnerTableCell-root-41 MuiTableCell-head InnerTableCell-head-42"
                  scope="col"
                >
                  <div
                    className="MuiInput-root MuiInput-fullWidth MuiInput-underline"
                  >
                    <input
                      className="MuiInput-input"
                      name="email"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <aside
            className="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom"
            style={
              Object {
                "margin": 10,
              }
            }
          >
            Result: 
            []
          </aside>
        </div>
      </div>
    </div>
  </div>
</div>
`;
